--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 
 </head>
 <body>
-    <a href="bassketballCtr\basketball.html">basketballCtr</a>
+    <a href="basketballCtr\basketball.html">basketballCtr</a>
     <a href="passwordGen\passwordGen.html">passwordGen</a>
 </body>
