fixed linking js file to passwordGen

--- a/passwordGen/passwordGen.html
+++ b/passwordGen/passwordGen.html
@@ -22,7 +22,7 @@
             <p style="margin: 0px; font-size: 16px; line-height: normal; font-weight: 400; margin-right: 10px;">Size
             </p>
             <input type="range" min="8" max="20" value="12" class="slider-len" id="myRange">
-            <output id="demo">24</output>
+            <output id="demo"></output>
         </div>
         <div class="toggle-container" style="margin-top: 5px;">
             <label class="switch">
@@ -59,7 +59,7 @@
             </div>
         </div>
     </div>
-    <script src="passwordGen.css"></script>
+    <script src="passwordGen.js"></script>
 </body>
 
 </html>
