changed home page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <head>
+    <style>
+        a{
+            display: block;
+            font-size: larger;
+            color: rgb(194, 190, 190);
+        }
 
+        body{
+            background-color: black;
+            padding: 15%;
+        }
+    </style>
 </head>
 <body>
     <a href="basketballCtr\basketball.html">basketballCtr</a>
